# platform.upstream.newfs-msdos

./: CMakeLists.txt  LICENSE  project.config
packaging/: newfs-msdos.spec
src/: newfs-msdos.c
