CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(newfs_msdos C)

SET(SRCS src/newfs-msdos.c)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -g -fno-omit-frame-pointer -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DANDROID")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
